PyMaker/datas/object2/RawHTML/i2701/Python_DOC_referPages.installing-apache-airflow-in-conda-environment.txt
<div class="post-text" itemprop="text">
<h2>The Situation</h2>
<p>I am trying to install <a href="https://airflow.apache.org/installation.html" rel="nofollow noreferrer">apache-airflow</a> using pip into a conda environment. I am not able to, since setup.py egg_info keeps failing:</p>
<blockquote>
<p>Command "python setup.py egg_info" failed with error code 1 in
  C:\Users\joshu\AppData\Local\Temp\pip-install-3efyslfh\apache-airflow\</p>
</blockquote>
<p>message when I run </p>
<p><code>pip install "apache-airflow[s3, postgres]"</code> </p>
<p>I ran this in Windows cmd, then did all the steps again as admin in cmd (shift+enter when opening cmd). </p>
<pre><code>(myVenv) C:\Users\joshu\Documents&gt;pip install "apache-airflow[s3, postgres]"
Collecting apache-airflow[postgres,s3]
  Using cached https://files.pythonhosted.org/packages/9e/12/6c70f9ef852b3061a3a6c9af03bd9dcdcaecb7d75c8898f82e3a54ad5f87/apache-airflow-1.9.0.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "&lt;string&gt;", line 1, in &lt;module&gt;
      File "C:\Users\joshu\AppData\Local\Temp\pip-install-3efyslfh\apache-airflow\setup.py", line 102
        async = [
              ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in C:\Users\joshu\AppData\Local\Temp\pip-install-3efyslfh\apache-airflow\
</code></pre>
<h2>Steps I took</h2>
<p>1)  I first created a conda environment and installed pip and setuptools into the environment:</p>
<pre><code>C:\Users\joshu\Documents&gt;conda create -n airflow pip setuptools
Solving environment: done


==&gt; WARNING: A newer version of conda exists. &lt;==
  current version: 4.5.4
  latest version: 4.5.10

Please update conda by running

    $ conda update -n base conda



## Package Plan ##

  environment location: C:\Users\joshu\Anaconda3\envs\airflow

  added / updated specs:
    - pip
    - setuptools


The following NEW packages will be INSTALLED:

    certifi:        2018.8.13-py37_0
    pip:            10.0.1-py37_0
    python:         3.7.0-hea74fb7_0
    setuptools:     40.0.0-py37_0
    vc:             14.1-h0510ff6_3
    vs2015_runtime: 15.5.2-3
    wheel:          0.31.1-py37_0
    wincertstore:   0.2-py37_0

C:\Users\joshu\Documents&gt;activate airflow

(airflow) C:\Users\joshu\Documents&gt; pip freeze
certifi==2018.8.13
wincertstore==0.2

(airflow) C:\Users\joshu\Documents&gt;conda list
# packages in environment at C:\Users\joshu\Anaconda3\envs\airflow:
#
# Name                    Version                   Build  Channel
certifi                   2018.8.13                py37_0
pip                       10.0.1                   py37_0
python                    3.7.0                hea74fb7_0
setuptools                40.0.0                   py37_0
vc                        14.1                 h0510ff6_3
vs2015_runtime            15.5.2                        3
wheel                     0.31.1                   py37_0
wincertstore              0.2                      py37_0

(airflow) C:\Users\joshu\Documents&gt;where pip
C:\Users\joshu\Anaconda3\envs\airflow\Scripts\pip.exe
C:\Users\joshu\Anaconda3\Scripts\pip.exe

(airflow) C:\Users\joshu\Documents&gt;which pip
/c/Users/joshu/Anaconda3/envs/airflow/Scripts/pip
</code></pre>
<p><strong>After this setup, running <code>pip install apache-airflow</code> gives me the error at the top of this page</strong></p>
<h2>Other steps I took</h2>
<ol>
<li>Installing apache-airflow on my system (no conda environment). This works, but I'm looking to have it contained in an environment.</li>
<li>Upgrading setuptools:</li>
</ol>

code:

<pre><code>(airflow) C:\Users\joshu\Documents&gt;pip install --upgrade setuptools
Collecting setuptools
  Using cached https://files.pythonhosted.org/packages/66/e8/570bb5ca88a8bcd2a1db9c6246bb66615750663ffaaeada95b04ffe74e12/setuptools-40.2.0-py2.py3-none-any.whl
Installing collected packages: setuptools
  Found existing installation: setuptools 40.0.0
    Uninstalling setuptools-40.0.0:
      Successfully uninstalled setuptools-40.0.0
Successfully installed setuptools-40.2.0
You are using pip version 10.0.1, however version 18.0 is available.
You should consider upgrading via the 'python -m pip install --upgrade pip' command.

(airflow) C:\Users\joshu\Documents&gt;pip freeze
certifi==2018.8.13
wincertstore==0.2
You are using pip version 10.0.1, however version 18.0 is available.
You should consider upgrading via the 'python -m pip install --upgrade pip' command.

(airflow) C:\Users\joshu\Documents&gt;conda list
# packages in environment at C:\Users\joshu\Anaconda3\envs\airflow:
#
# Name                    Version                   Build  Channel
certifi                   2018.8.13                py37_0
pip                       10.0.1                   py37_0
python                    3.7.0                hea74fb7_0
setuptools                40.2.0                    &lt;pip&gt;
setuptools                40.0.0                   py37_0
vc                        14.1                 h0510ff6_3
vs2015_runtime            15.5.2                        3
wheel                     0.31.1                   py37_0
wincertstore              0.2                      py37_0

(airflow) C:\Users\joshu\Documents&gt;pip install "apache-airflow[s3, postgres]"
Collecting apache-airflow[postgres,s3]
  Using cached https://files.pythonhosted.org/packages/9e/12/6c70f9ef852b3061a3a6c9af03bd9dcdcaecb7d75c8898f82e3a54ad5f87/apache-airflow-1.9.0.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "&lt;string&gt;", line 1, in &lt;module&gt;
      File "C:\Users\joshu\AppData\Local\Temp\pip-install-n1v4sa6d\apache-airflow\setup.py", line 102
        async = [
              ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in C:\Users\joshu\AppData\Local\Temp\pip-install-n1v4sa6d\apache-airflow\
</code></pre>
<h3>I've also tried upgrading pip then running install -- no luck</h3>
<pre><code>(airflow) C:\Users\joshu\Documents&gt;python -m pip install --upgrade pip
Collecting pip
  Using cached https://files.pythonhosted.org/packages/5f/25/e52d3f31441505a5f3af41213346e5b6c221c9e086a166f3703d2ddaf940/pip-18.0-py2.py3-none-any.whl
Installing collected packages: pip
  Found existing installation: pip 10.0.1
    Uninstalling pip-10.0.1:
      Successfully uninstalled pip-10.0.1
Successfully installed pip-18.0

(airflow) C:\Users\joshu\Documents&gt;which pip
/c/Users/joshu/Anaconda3/envs/airflow/Scripts/pip

(airflow) C:\Users\joshu\Documents&gt;pip --version
pip 18.0 from c:\users\joshu\anaconda3\envs\airflow\lib\site-packages\pip (python 3.7)

(airflow) C:\Users\joshu\Documents&gt;pip install "apache-airflow[s3, postgres]"
</code></pre>
<p>Ultimately I would like to have airflow and related packages I need for my project in a conda environment.</p>
</div>
<div class="post-text" itemprop="text">
<p>The error appears to be because <a href="https://docs.python.org/3/whatsnew/3.7.html" rel="noreferrer"><code>async</code> is a reserved keyword in Python 3.7</a> and this package has not updated their <code>setup.py</code> script. You can use Python 3.6 until the package is updated</p>
<pre><code>conda create -n airflow pip setuptools python=3.6
pip install "apache-airflow[s3, postgres]"
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>I ran into the same problems. Apache Airflow 1.10 is incompatible.</p>
<p>My solution was to build the source code. I got the latest source code via git. This command creates a wheel file in the dist directory.</p>
<pre><code>python3 setup.py bdist_wheel
</code></pre>
<p>Then you install </p>
<pre><code>pip3 install apache_airflow-2.0.0.dev0+incubating-py3-none-any.whl
</code></pre>
</div>
<span class="comment-copy">What are the various versions of Python you're using here? If the conda version is Python 3.7, then <a href="https://docs.python.org/3/whatsnew/3.7.html" rel="nofollow noreferrer"><code>async</code> is a reserved keyword</a> and you should use Python 3.6, <code>conda  create -n airflow pip setuptools python=3.6</code></span>
<span class="comment-copy">Here's a suggestion. Use virtualenv or pipenv instead of conda. Also note, to install into a conda env the syntax is <code>conda install ******</code> . Not pip</span>
<span class="comment-copy"><a href="https://conda.io/docs/_downloads/conda-cheatsheet.pdf" rel="nofollow noreferrer">conda.io/docs/_downloads/conda-cheatsheet.pdf</a></span>
<span class="comment-copy">@NihalSangeeth Why are you suggesting to use virtualenv or pipenv on a question about conda? Pip is a perfectly valid (although not the most recommended) way of installing packages into conda environments - pip itself is installed in every conda environment, if it wasn't to be used, why would that be the default? Anyway, if I'm right that it's because of Python 3.7 vs. 3.6, then this could happen in any code, and the only reason pip is relevant here is because the code is in setup.py, which would also cause problems for building conda packages.</span>
<span class="comment-copy">@darthbith you genius! Yes the error was in plain sight -- async becoming a keyword in python 3.7 was the issue. Much appreciated! Installation now was smooth as butter. Ah the woes of package dependencies..</span>
